--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/personalblogsiteRMIT/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/favicon.ico" type="image/icon type">
     <script src="https://kit.fontawesome.com/d7cc0a210f.js" crossorigin="anonymous"></script>
     <title>Daniel Brasher | Front End Developer Portfolio</title>
