--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/favicon.ico" type="image/icon type">
+    <link rel="icon" href="favicon.ico" type="image/icon type">
     <script src="https://kit.fontawesome.com/d7cc0a210f.js" crossorigin="anonymous"></script>
     <title>Daniel Brasher | Front End Developer Portfolio</title>
 </head>
@@ -14,19 +14,19 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="/index.html" class="nav-logo"><img src="/images/logo.png" alt="Dan Brasher Logo"></a>
+            <a href="index.html" class="nav-logo"><img src="images/logo.png" alt="Dan Brasher Logo"></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="/index.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/blog.html" class="nav-link">Blog</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/about.html" class="nav-link">About</a>
+                    <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/contact.html" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -73,10 +73,10 @@
 
         <span>
             <p>Aither are a water policy and management consultancy.</p>
-            <a href="/404.html"><button class="button-11" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
+            <a href="404.html"><button class="button-11" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
         </span>
       </div>
-      <div class="section_2_hero"><img src="/images/responsive-aither-preview.png" alt="Aither responsive website preview"></div>
+      <div class="section_2_hero"><img src="images/responsive-aither-preview.png" alt="Aither responsive website preview"></div>
     </div>
 
 <!-- Section 3 project case study -->
@@ -95,10 +95,10 @@
 
         <span>
             <p>Leading insurance and financial services body for Asia-Pacific region.</p>
-            <a href="/404.html"><button class="button-11" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
+            <a href="404.html"><button class="button-11" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
         </span>
       </div>
-      <div class="section_3_hero"><img src="/images/responsive-anziif-preview copy.png" alt="Aither responsive website preview"></div>
+      <div class="section_3_hero"><img src="images/responsive-anziif-preview copy.png" alt="Aither responsive website preview"></div>
     </div>
 
 <!-- Section 4 project case study -->
@@ -117,10 +117,10 @@
 
         <span>
             <p>The Lead Agency are a boutique B2B marketing agency.</p>
-            <a href="/404.html"><button class="button-11" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
+            <a href="404.html"><button class="button-11" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
         </span>
       </div>
-      <div class="section_4_hero"><img src="/images/responsive-leadagency-preview.png" alt="The Lead Agency responsive website preview" width="300px""></div>
+      <div class="section_4_hero"><img src="images/responsive-leadagency-preview.png" alt="The Lead Agency responsive website preview" width="300px""></div>
     </div>
 
   </div>
@@ -132,16 +132,16 @@
     <div class="footer-content">
         <p>Contact</p>
         <ul class="socials">
-            <li><a href="/404.html"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-linkedin-square"></i></a></li>
          </ul>
 
          <div class="footer-menu">
             <ul class="f-menu">
-               <li><a href="/404.html">Resume</a></li>
-               <li><a href="/404.html">Email</a></li>
+               <li><a href="404.html">Resume</a></li>
+               <li><a href="404.html">Email</a></li>
 
             </ul>
            </div>
