--- a/blog_template.html
+++ b/blog_template.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/favicon.ico" type="image/icon type">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico" type="image/icon type">
     <script src="https://kit.fontawesome.com/d7cc0a210f.js" crossorigin="anonymous"></script>
     <title>Daniel Brasher | This is a blog post</title>
 </head>
@@ -15,19 +15,19 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="/index.html" class="nav-logo"><img src="/images/logo.png" alt="Dan Brasher Logo"></a>
+            <a href="index.html" class="nav-logo"><img src="/images/logo.png" alt="Dan Brasher Logo"></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="/index.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/blog.html" class="nav-link">Blog</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/about.html" class="nav-link">About</a>
+                    <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/contact.html" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -53,7 +53,7 @@
             <h3>Dan Brasher | 00:14:00 AEDT 24/12/2022</h3>
         </div>
         <div class="blog_template_header_1">
-            <img src="/images/blog-placeholder.jpg" alt="Dan Brasher headshot">
+            <img src="images/blog-placeholder.jpg" alt="Dan Brasher headshot">
         </div>
     </div>
     <div class="blog_template_body">
@@ -66,7 +66,7 @@
 
     <div class="blog_template_author">
         <div class="blog_template_author_1">
-            <img src="/images/profile-img.jfif" alt="Dan Brasher headshot">
+            <img src="images/profile-img.jfif" alt="Dan Brasher headshot">
         </div>
         <div class="blog_template_author_2">
             <h3>About the author</h3>
@@ -98,16 +98,16 @@
     <div class="footer-content">
         <p>Contact</p>
         <ul class="socials">
-            <li><a href="/404.html"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-linkedin-square"></i></a></li>
          </ul>
 
          <div class="footer-menu">
             <ul class="f-menu">
-               <li><a href="">Resume</a></li>
-               <li><a href="">Email</a></li>
+               <li><a href="404.html">Resume</a></li>
+               <li><a href="404.html">Email</a></li>
 
             </ul>
            </div>
