--- a/blog.html
+++ b/blog.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/favicon.ico" type="image/icon type">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico" type="image/icon type">
     <script src="https://kit.fontawesome.com/d7cc0a210f.js" crossorigin="anonymous"></script>
     <title>Daniel Brasher | Blog homepage</title>
 </head>
@@ -15,19 +14,19 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="/index.html" class="nav-logo"><img src="/images/logo.png" alt="Dan Brasher Logo"></a>
+            <a href="index.html" class="nav-logo"><img src="images/logo.png" alt="Dan Brasher Logo"></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="/index.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/blog.html" class="nav-link">Blog</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/about.html" class="nav-link">About</a>
+                    <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/contact.html" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -38,7 +37,7 @@
         </nav>
     </header>
 
-    <script src="/script.js">
+    <script src="script.js">
     </script>
 
 <!-- Container CSS Grid body of webpage-->
@@ -63,7 +62,7 @@
             <h5>Title description, Dec 7, 2023</h5>
             <div class="blog_img_001"></div>
             <figcaption>Above: Picture of macarons.</figcaption>
-            <a href="/blog_template.html"><button class="button-12" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
+            <a href="blog_template.html"><button class="button-12" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         </article>
         <article class="blog_002">
@@ -71,7 +70,7 @@
             <h5>Title description, Dec 7, 2023</h5>
             <div class="blog_img_002"></div>
             <figcaption>Above: Picture of umbrellas.</figcaption>
-            <a href="/blog_template.html"><button class="button-12" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
+            <a href="blog_template.html"><button class="button-12" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         </article>
         <article class="blog_003">
@@ -79,15 +78,15 @@
             <h5>Title description, Dec 7, 2023</h5>
             <div class="blog_img_003"></div>
             <figcaption>Above: Picture of a flower.</figcaption>
-            <a href="/blog_template.html"><button class="button-12" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
+            <a href="blog_template.html"><button class="button-12" role="button">View blog <i class='fas fa-angle-double-right' id="view_case_study_icon"></i></button></a>
             <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
         </article>
         <div class="blog_page_nav">
-            <a href="/404.html" class="previous">&laquo;</a>
-            <a href="/404.html" class="blog_page_1">1</a>
-            <a href="/404.html" class="blog_page_2">2</a>
-            <a href="/404.html" class="blog_page_3">3</a>
-            <a href="/404.html" class="next">&raquo;</a>
+            <a href="404.html" class="previous">&laquo;</a>
+            <a href="404.html" class="blog_page_1">1</a>
+            <a href="404.html" class="blog_page_2">2</a>
+            <a href="404.html" class="blog_page_3">3</a>
+            <a href="404.html" class="next">&raquo;</a>
         </div>
     </div>
 
@@ -101,27 +100,27 @@
         <div class="follow_me">
             <h2>Follow me</h2>
             <ul class="fm_socials">
-                <li><a href="/404.html"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="/404.html"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="/404.html"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="/404.html"><i class="fa fa-linkedin-square"></i></a></li>
+                <li><a href="404.html"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="404.html"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="404.html"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="404.html"><i class="fa fa-linkedin-square"></i></a></li>
              </ul>
         </div>
         <div class="popular_posts">
             <h2>Popular posts</h2>
                 <ul>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #1</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #2</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #3</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #4</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #5</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #6</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #7</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #8</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #9</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #10</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #11</li></a>
-                    <a href="/blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #12</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #1</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #2</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #3</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #4</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #5</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #6</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #7</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #8</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #9</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #10</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #11</li></a>
+                    <a href="blog_template.html"><li><i class='fas fa-angle-double-right' id="view_case_study_icon"></i> Blog post #12</li></a>
                 </ul>
         </div>
     </div>
@@ -135,16 +134,16 @@
     <div class="footer-content">
         <p>Contact</p>
         <ul class="socials">
-            <li><a href="/404.html"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-linkedin-square"></i></a></li>
          </ul>
 
          <div class="footer-menu">
             <ul class="f-menu">
-               <li><a href="/404.html">Resume</a></li>
-               <li><a href="/404.html">Email</a></li>
+               <li><a href="404.html">Resume</a></li>
+               <li><a href="404.html">Email</a></li>
 
             </ul>
            </div>
