--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="icon" href="/favicon.ico" type="image/icon type">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico" type="image/icon type">
     <script src="https://kit.fontawesome.com/d7cc0a210f.js" crossorigin="anonymous"></script>
     <title>Daniel Brasher | Oops! We can't find your page :(</title>
 </head>
@@ -15,19 +15,19 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="/index.html" class="nav-logo"><img src="/images/logo.png" alt="Dan Brasher Logo"></a>
+            <a href="index.html" class="nav-logo"><img src="images/logo.png" alt="Dan Brasher Logo"></a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="/index.html" class="nav-link">Home</a>
+                    <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/blog.html" class="nav-link">Blog</a>
+                    <a href="blog.html" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
+                    <a href="about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="/contact.html" class="nav-link">Contact</a>
+                    <a href="contact.html" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -50,7 +50,7 @@
     <div class="header_404">
         <h2>404 Error</h2>
         <h3>Oops! Looks like we can't find that page :( </h3>
-        <img src="/images/404.jpg" alt="404 error">
+        <img src="images/404.jpg" alt="404 error">
     </div>
 
 </div>
@@ -61,16 +61,16 @@
     <div class="footer-content">
         <p>Contact</p>
         <ul class="socials">
-            <li><a href="/404.html"><i class="fa fa-facebook"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="/404.html"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="404.html"><i class="fa fa-linkedin-square"></i></a></li>
          </ul>
 
          <div class="footer-menu">
             <ul class="f-menu">
-               <li><a href="/404.html">Resume</a></li>
-               <li><a href="/404.html">Email</a></li>
+               <li><a href="404.html">Resume</a></li>
+               <li><a href="404.html">Email</a></li>
 
             </ul>
            </div>
