--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
     </header>
 
-    <script src="/script.js">
+    <script src="../script.js">
     </script>
 
 <!-- Container CSS Grid body of webpage-->
