--- a/blog_template.html
+++ b/blog_template.html
@@ -15,7 +15,7 @@
 
     <header class="header">
         <nav class="navbar">
-            <a href="index.html" class="nav-logo"><img src="/images/logo.png" alt="Dan Brasher Logo"></a>
+            <a href="index.html" class="nav-logo"><img src="../images/logo.png" alt="Dan Brasher Logo"></a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link">Home</a>
