--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="favicon.ico" type="image/icon type">
     <script src="https://kit.fontawesome.com/d7cc0a210f.js" crossorigin="anonymous"></script>
-    <title>Daniel Brasher | Front End Developer Portfolio</title>
+    <title>Daniel Brasher | Digital Marketing Portfolio</title>
 </head>
 <body>
 
