--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="section_1_right">
         <span>
             <h1>Hello!</h1>
-            <h2>I'm Dan, and I'm a big poopy pants &#U+1F4A9;.</h2>
+            <h2>I'm Dan, and I'm a big poopy pants &#\1F4A9;.</h2>
         </span>
       </div>
       <div class="section_1_left"></div>
