--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
       <div class="section_1_right">
         <span>
             <h1>Hello!</h1>
-            <h2>I'm Dan, and I'm a big poopy pants
-&#128169;.</h2>
+            <h2>I'm Dan, a digital marketing expert.</h2>
         </span>
       </div>
       <div class="section_1_left"></div>
